--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,7 +46,7 @@
         "key-spacing": "warn",
         "linebreak-style": [
             "warn",
-            "windows"
+            "unix"
         ],
         "new-cap": "warn",
         "new-parens": "warn",
