--- a/package.json
+++ b/package.json
@@ -1512,32 +1512,35 @@
 		}
 	},
 	"scripts": {
-		"vscode:prepublish": "pnpm run compile",
+		"vscode:prepublish": "npm run compile",
 		"vscode:uninstall": "node ./out/life-cycle/uninstall.js",
 		"clean": "node ./.vscode/clean.js",
-		"compile": "pnpm run lint && pnpm run clean && pnpm run compile-src && pnpm run compile-web",
+		"compile": "npm run lint && npm run clean && npm run compile-src && npm run compile-web",
 		"compile-src": "tsc -p ./src && node ./.vscode/package-src.js",
 		"compile-web": "tsc -p ./web && node ./.vscode/package-web.js",
 		"compile-web-debug": "tsc -p ./web && node ./.vscode/package-web.js debug",
 		"lint": "eslint -c .eslintrc.json --max-warnings 0 --ext .ts ./src ./tests ./web",
-		"package": "pnpm exec vsce package --no-dependencies",
-		"package-and-install": "pnpm run package && node ./.vscode/install-package.js",
+		"package": "npm exec vsce package --no-dependencies",
+		"package-and-install": "npm run package && node ./.vscode/install-package.js",
 		"test": "jest --verbose",
 		"test-and-report-coverage": "jest --verbose --coverage"
 	},
 	"dependencies": {
-		"iconv-lite": "0.5.0"
+		"iconv-lite": "^0.6.3"
 	},
 	"devDependencies": {
 		"@types/jest": "26.0.19",
-		"@types/node": "8.10.62",
+		"@types/node": "^18.0.0",
 		"@types/vscode": "1.38.0",
 		"@typescript-eslint/eslint-plugin": "4.10.0",
 		"@typescript-eslint/parser": "4.10.0",
 		"eslint": "7.15.0",
-		"jest": "26.6.3",
-		"ts-jest": "26.4.4",
-		"typescript": "4.0.2",
-		"uglify-js": "3.10.0"
+		"jest": "^29.7.0",
+		"ts-jest": "^29.3.2",
+		"typescript": "~4.9.5",
+		"uglify-js": "3.10.0",
+		"web-ext-types": "^3.2.1",
+		"webpack": "^5.91.0",
+		"webpack-cli": "^5.1.4"
 	}
 }
