--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -4,7 +4,7 @@
 			"es6",
 			"dom"
 		],
-		"module": "none",
+		"module": "commonjs",
 		"moduleResolution": "node",
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitAny": true,
