--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"workspace"
 	],
 
-	"main": "./out/extension.js",
+	"main": "./out/src/extension.js",
 	"contributes": {
 		"commands": [
 			{
